--- a/Vue_SPA/css/login.css
+++ b/Vue_SPA/css/login.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .login-body {
   display: block;
 }
@@ -54,24 +55,24 @@
   display: inline-block;
   width: 300px;
   height: 140px;
-  margin: 0 auto;
+  margin-top: 16px;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper {
   position: relative;
   display: inline-block;
   width: 740px;
-  padding-top: 16px;
+  height: 120px;
   text-align: left;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn {
   position: relative;
-  top: 16px;
   display: inline-block;
   width: 300px;
   height: 120px;
   background: white;
+  border-radius: 8px 8px 8px 8px;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb {
@@ -82,7 +83,8 @@
   color: #fff;
   border-radius: 8px 8px 8px 8px;
   background: #4f71b6;
-  font-size: 21px;
+  text-align: center;
+  font-size: 20px;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb::before {
@@ -113,8 +115,11 @@
   padding: 15px 15px 15px 65px;
   color: #fff;
   border-radius: 8px 8px 8px 8px;
-  background: #e05e5e;
-  font-size: 21px;
+  background: #e0925e;
+  font-size: 20px;
+  text-align: center;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo::before {
@@ -122,10 +127,10 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: 52px;
-  height: 52px;
+  width: 51px;
+  height: 51px;
   content: "";
-  border-radius: 8px 0 0 8px;
+  border-radius: 8px 0px 0px 8px;
   background-color: #d8d8d8;
   background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_weibo_btn.png);
   background-repeat: no-repeat;
@@ -134,7 +139,7 @@
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0.3em #c21b24;
+  box-shadow: 0 0.3em #e06818;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter {
@@ -145,7 +150,9 @@
   color: #fff;
   border-radius: 8px 8px 8px 8px;
   background: #33a6d2;
-  font-size: 21px;
+  text-align: center;
+  font-size: 20px;
+  overflow: hidden;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter::before {
@@ -156,11 +163,11 @@
   width: 50px;
   height: 50px;
   content: "";
-  border-right: 1px solid #33a6d2;
+  border-right: 1px solid #53bae2;
   background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_twitter_btn_1.png);
   background-repeat: no-repeat;
   background-position: 12px center;
-  box-shadow: 1px 0 0 0 #4287d7;
+  box-shadow: 1px 0 0 0 #2593be;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter:hover {
@@ -171,14 +178,16 @@
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin {
   position: absolute;
   top: 68px;
-  display: block;
   width: 220px;
   height: 21px;
   padding: 15px 15px 15px 65px;
   color: #fff;
   border-radius: 8px 8px 8px 8px;
-  background: #e05e5e;
-  font-size: 21px;
+  background: #65b331;
+  z-index: 1;
+  font-size: 20px;
+  text-align: center;
+  overflow: hidden;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin::before {
@@ -186,22 +195,24 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: 52px;
-  height: 52px;
+  width: 50px;
   content: "";
-  border-radius: 8px 0 0 8px;
-  background-color: #d8d8d8;
+  border-radius: 8px 8px 8px 8px;
+  border-right: 1px solid #7fc04f;
+  background-color: #65b331;
   background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login_weixin@2x.png);
   background-repeat: no-repeat;
-  background-position: 12px center;
+  background-position: 5px center;
+  background-size: 80%;
+  box-shadow: 1px 0 0 0 #64a534;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0.3em #c21b24;
+  box-shadow: 0 0.3em #3a7212;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .prev-next {
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next {
   position: absolute;
   top: 180px;
   right: 10%;
@@ -210,29 +221,101 @@
   height: 10%;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .prev-next i[data-click="btn-next"] {
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"] {
   display: block;
   float: right;
   width: 19px;
   height: 31px;
   cursor: pointer;
+  z-index: 999;
   background: url(https://cdn04.pinkoi.com/pinkoi.site/login/img_arrow_r_2x.png) right center no-repeat;
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .prev-next i[data-click="btn-back"] {
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"] {
   display: block;
   float: left;
   width: 19px;
   height: 31px;
   cursor: pointer;
+  z-index: 999;
   background: url(//cdn04.pinkoi.com/pinkoi.site/login/img_arrow_l_2x.png) left center no-repeat;
   background-size: 19px 31px;
 }
 
-.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .promo {
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .promo {
+  position: relative;
+  margin: 0 10px 24px 10px;
+  font-size: 15px;
+  display: block;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .login-pinkoi-account {
+  font-size: 20px;
+  text-align: center;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul {
   position: relative;
   display: block;
+  list-style-type: none;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li {
+  position: relative;
+  display: block;
+  width: 228px;
+  left: 17%;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #login-id {
+  display: block;
+  width: inherit;
+  height: inherit;
+  padding: 18px 20px 17px 50px;
+  border: 1px solid #ccc;
+  border-radius: 8px 8px 0 0;
+  outline: none;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #id-input {
+  position: absolute;
+  color: #bbb;
+  left: 20px;
+  right: 12px;
+  top: 0;
+  bottom: 3px;
+  text-align: left;
+  padding: 18px 30px 15px 28px;
+  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+  background-size: 21px 300px;
+  background-repeat: no-repeat;
+  background-position: 0 16px;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #login-password {
+  display: block;
+  width: inherit;
+  height: inherit;
+  border: 1px solid #ccc;
+  padding: 18px 20px 17px 50px;
+  border-radius: 0 0 8px 8px;
+  outline: none;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #password-input {
+  position: absolute;
+  color: #bbb;
+  left: 20px;
+  right: 12px;
+  top: 0;
+  bottom: 3px;
+  text-align: left;
+  padding: 18px 30px 15px 28px;
+  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+  background-size: 21px 300px;
+  background-repeat: no-repeat;
+  background-position: 0 -93px;
 }
 
 .next {
@@ -241,5 +324,33 @@
 
 .back {
   visibility: hidden;
+}
+
+.useless::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 5px;
+  width: 250px;
+  top: 50%;
+  right: 0px;
+  /*设置right和top使叉号居中*/
+  border-radius: 0 0 0 50%;
+  background: red;
+  transform: rotate(-11deg);
+}
+
+.useless::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 5px;
+  width: 250px;
+  top: 47%;
+  right: 0px;
+  /*设置right和top使叉号居中*/
+  border-radius: 0 0 0 50%;
+  background: red;
+  transform: rotate(10deg);
 }
 /*# sourceMappingURL=login.css.map */
