--- a/Vue_SPA/src/scss/login.scss
+++ b/Vue_SPA/src/scss/login.scss
@@ -48,35 +48,34 @@
             display: inline-block;
             width: 300px;
             height: 140px;
-
-            margin: 0 auto;
+            margin-top: 16px;
 
             .inner-btn-wrapper {
               position: relative;
               display: inline-block;
               width: 740px;
-              padding-top: 16px;
+              height: 120px;
               text-align: left;
 
               .social-login-btn {
                 position: relative;
-                top: 16px;
+
                 display: inline-block;
                 width: 300px;
                 height: 120px;
                 background: white;
+                border-radius: 8px 8px 8px 8px;
 
                 .m-button-fb {
                   position: absolute;
-
                   width: 220px;
                   height: 21px;
                   padding: 15px 15px 15px 65px;
                   color: #fff;
                   border-radius: 8px 8px 8px 8px;
                   background: #4f71b6;
-
-                  font-size: 21px;
+                  text-align: center;
+                  font-size: 20px;
 
                   &::before {
                     position: absolute;
@@ -102,151 +101,261 @@
                 .m-button-weibo {
                   position: absolute;
                   top: 68px;
-
                   width: 220px;
                   height: 21px;
                   padding: 15px 15px 15px 65px;
                   color: #fff;
                   border-radius: 8px 8px 8px 8px;
-                  background: rgb(224, 94, 94);
+                  background: rgb(224, 146, 94);
+                  font-size: 20px;
+                  text-align: center;
+                  overflow: hidden;
 
-                  font-size: 21px;
+                  z-index: 1;
+                  &::before {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    width: 51px;
+                    height: 51px;
+                    content: "";
+
+                    border-radius: 8px 0px 0px 8px;
+                    background-color: #d8d8d8;
+                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_weibo_btn.png);
+                    background-repeat: no-repeat;
+                    background-position: 12px center;
+                  }
+
+                  &:hover {
+                    transform: translateY(-5px);
+
+                    box-shadow: 0 0.3em rgb(224, 104, 24);
+                  }
+                }
+                .m-button-twitter {
+                  position: absolute;
+                  width: 220px;
+                  height: 21px;
+                  padding: 15px 15px 15px 65px;
+                  color: #fff;
+                  border-radius: 8px 8px 8px 8px;
+                  background: #33a6d2;
+                  text-align: center;
+                  font-size: 20px;
+                  overflow: hidden;
 
                   &::before {
                     position: absolute;
                     top: 0;
                     bottom: 0;
                     left: 0;
-                    width: 52px;
-                    height: 52px;
+                    width: 50px;
+                    height: 50px;
                     content: "";
 
-                    border-radius: 8px 0 0 8px;
-                    background-color: #d8d8d8;
-                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_weibo_btn.png);
+                    border-right: 1px solid #53bae2;
+                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_twitter_btn_1.png);
                     background-repeat: no-repeat;
                     background-position: 12px center;
+                    box-shadow: 1px 0 0 0 #2593be;
+                  }
+
+                  &:hover {
+                    transform: translateY(-5px);
+
+                    box-shadow: 0 0.3em #4287d7;
+                  }
+                }
+                .m-button-weixin {
+                  position: absolute;
+                  top: 68px;
+                  width: 220px;
+                  height: 21px;
+                  padding: 15px 15px 15px 65px;
+                  color: #fff;
+                  border-radius: 8px 8px 8px 8px;
+                  background: #65b331;
+                  z-index: 1;
+                  font-size: 20px;
+                  text-align: center;
+                  overflow: hidden;
+
+                  &::before {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    width: 50px;
+                    content: "";
+
+                    border-radius: 8px 8px 8px 8px;
+                    border-right: 1px solid #7fc04f;
+                    background-color: #65b331;
+                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login_weixin@2x.png);
+                    background-repeat: no-repeat;
+                    background-position: 5px center;
+                    background-size: 80%;
+                    box-shadow: 1px 0 0 0 #64a534;
                   }
                   &:hover {
                     transform: translateY(-5px);
 
-                    box-shadow: 0 0.3em #c21b24;
+                    box-shadow: 0 0.3em #3a7212;
                   }
                 }
-                  .m-button-twitter {
-                    position: absolute;
-                    width: 220px;
-                    height: 21px;
-                    padding: 15px 15px 15px 65px;
-                    color: #fff;
-                    border-radius: 8px 8px 8px 8px;
-                    background: #33a6d2;
+              }
+            }
+          }
 
-                    font-size: 21px;
+          .prev-next {
+            position: absolute;
+            top: 180px;
+            right: 10%;
+            left: 10%;
+            display: block;
+            height: 10%;
 
-                    &::before {
-                      position: absolute;
-                      top: 0;
-                      bottom: 0;
-                      left: 0;
-                      width: 50px;
-                      height: 50px;
-                      content: "";
+            i[data-click="btn-next"] {
+              display: block;
+              float: right;
+              width: 19px;
+              height: 31px;
+              cursor: pointer;
+              z-index: 999;
+              background: url(https://cdn04.pinkoi.com/pinkoi.site/login/img_arrow_r_2x.png)
+                right center no-repeat;
+              background-size: 19px 31px;
+            }
+            i[data-click="btn-back"] {
+              display: block;
+              float: left;
+              width: 19px;
+              height: 31px;
+              cursor: pointer;
+              z-index: 999;
+              background: url(//cdn04.pinkoi.com/pinkoi.site/login/img_arrow_l_2x.png)
+                left center no-repeat;
+              background-size: 19px 31px;
+            }
+          }
+          .promo {
+            position: relative;
+            margin: 0 10px 24px 10px;
+            font-size: 15px;
+            display: block;
+          }
 
-                      border-right: 1px solid #33a6d2;
-                      background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_twitter_btn_1.png);
-                      background-repeat: no-repeat;
-                      background-position: 12px center;
-                      box-shadow: 1px 0 0 0 #4287d7;
-                    }
-                    &:hover {
-                      transform: translateY(-5px);
-
-                      box-shadow: 0 0.3em #4287d7;
-                    }
-                  }
-                  .m-button-weixin {
-                    position: absolute;
-                    top: 68px;
+        }
+          .form-wrapper{
+            #login-form{
+              .login-pinkoi-account{
+                font-size: 20px;
+                text-align: center;
+              }
+                ul{
+                  position: relative;
+                  display: block;
+                  list-style-type: none;
+                  
+                  li{
+                    position: relative;
                     display: block;
-                    width: 220px;
-                    height: 21px;
-                    padding: 15px 15px 15px 65px;
-                    color: #fff;
-                    border-radius: 8px 8px 8px 8px;
-                    background: rgb(224, 94, 94);
-
-                    font-size: 21px;
-
-                    &::before {
-                      position: absolute;
-                      top: 0;
-                      bottom: 0;
-                      left: 0;
-                      width: 52px;
-                      height: 52px;
-                      content: "";
-
-                      border-radius: 8px 0 0 8px;
-                      background-color: #d8d8d8;
-                      background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login_weixin@2x.png);
-                      background-repeat: no-repeat;
-                      background-position: 12px center;
-                    }
-                    &:hover {
-                      transform: translateY(-5px);
-
-                      box-shadow: 0 0.3em #c21b24;
-                    }
+                    width:228px;
+                    left:17%;
+                    
+                  #login-id{
+                    display: block;
+                    width: inherit;
+                    height: inherit;
+                    padding: 18px 20px 17px 50px;
+                    border: 1px solid #ccc;
+                    border-radius: 8px 8px 0 0;
+                    outline: none;
+                    
+                  }
+                  #id-input{
+                    position: absolute;
+                    color: #bbb;
+                    left: 20px; 
+                    right: 12px;
+                    top: 0;
+                    bottom: 3px;
+                    text-align: left;
+                    padding: 18px 30px 15px 28px;
+                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+                    background-size: 21px 300px;
+                    background-repeat: no-repeat;
+                    background-position: 0 16px;
+                    
+                  }
+                  #login-password{
+                    display: block;
+                    width: inherit;
+                    height: inherit;
+                    border: 1px solid #ccc;
+                    padding: 18px 20px 17px 50px;
+                    border-radius: 0 0 8px 8px;
+                    outline: none;
+                  }
+                  #password-input{
+                     position: absolute;
+                    color: #bbb;
+                    left: 20px;
+                    right: 12px;
+                    top: 0;
+                    bottom: 3px;
+                    text-align: left;
+                    padding: 18px 30px 15px 28px;
+                    background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+                    background-size: 21px 300px;
+                    background-repeat: no-repeat;
+                    background-position: 0 -93px;
+                    
                   }
                 }
-              }
-
-              .prev-next {
-                position: absolute;
-                top: 180px;
-                right: 10%;
-                left: 10%;
-                display: block;
-                height: 10%;
-
-                i[data-click="btn-next"] {
-                  display: block;
-                  float: right;
-                  width: 19px;
-                  height: 31px;
-                  cursor: pointer;
-
-                  background: url(https://cdn04.pinkoi.com/pinkoi.site/login/img_arrow_r_2x.png)
-                    right center no-repeat;
-                  background-size: 19px 31px;
                 }
-                i[data-click="btn-back"] {
-                  display: block;
-                  float: left;
-                  width: 19px;
-                  height: 31px;
-                  cursor: pointer;
-
-                  background: url(//cdn04.pinkoi.com/pinkoi.site/login/img_arrow_l_2x.png)
-                    left center no-repeat;
-                  background-size: 19px 31px;
-                }
-              }
-              .promo {
-                position: relative;
-                display: block;
               }
             }
           }
         }
       }
     }
-  }
+  
 
+
+//共用css
 .next {
   visibility: hidden;
 }
 .back {
   visibility: hidden;
+}
+
+.useless {
+  &::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 5px;
+    width: 250px;
+    top: 50%;
+    right: 0px; /*设置right和top使叉号居中*/
+    border-radius: 0 0 0 50%;
+    background: red;
+    transform: rotate(-11deg);
+  }
+  &::after {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    height: 5px;
+    width: 250px;
+    top: 47%;
+    right: 0px; /*设置right和top使叉号居中*/
+    border-radius: 0 0 0 50%;
+    background: red;
+    transform: rotate(10deg);
+  }
 }
