login頁面完成(準備實作登入驗證功能)
所有圖檔存取方式改為抓到自身專案上

--- a/Vue_SPA/src/scss/gheader.scss
+++ b/Vue_SPA/src/scss/gheader.scss
@@ -28,7 +28,7 @@
                   background-repeat: no-repeat;
                   background-position: center;
                   background-size: 100% auto;
-                  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/event/xmas2018/logo_header.svg);
+                  background-image: url(../src/image/svg_logo_header.svg);
                  }
 
               .header-search{
@@ -104,7 +104,7 @@
                         top: 0;
                         width: 32px;
                         height: 32px;
-                        background: url(https://cdn04.pinkoi.com/pinkoi.site/general/mic_2x.png) center center no-repeat;
+                        background: url(../src/image/img_search_mic_icon.png) center center no-repeat;
                         background-size: 30px;
                      }
                  }
