--- a/Vue_SPA/css/gheader.css
+++ b/Vue_SPA/css/gheader.css
@@ -31,7 +31,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% auto;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/event/xmas2018/logo_header.svg);
+  background-image: url(../src/image/svg_logo_header.svg);
 }
 
 .g-header .g-wrap-expand .g-header-top .header-search {
@@ -110,7 +110,7 @@
   top: 0;
   width: 32px;
   height: 32px;
-  background: url(https://cdn04.pinkoi.com/pinkoi.site/general/mic_2x.png) center center no-repeat;
+  background: url(../src/image/img_search_mic_icon.png) center center no-repeat;
   background-size: 30px;
 }
 
