--- a/Vue_SPA/css/login.css
+++ b/Vue_SPA/css/login.css
@@ -44,7 +44,7 @@
   height: 68px;
   margin: 0 auto;
   margin-top: 0;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/event/xmas2018/logo_header.svg);
+  background-image: url(../src/image/svg_logo_header.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 200px auto;
@@ -55,7 +55,7 @@
   display: inline-block;
   width: 300px;
   height: 140px;
-  margin-top: 16px;
+  margin-top: 24px;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper {
@@ -85,6 +85,7 @@
   background: #4f71b6;
   text-align: center;
   font-size: 20px;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb::before {
@@ -96,7 +97,7 @@
   height: 50px;
   content: "";
   border-right: 1px solid #617fbd;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_fb_btn.png);
+  background-image: url(../src/image/img_login_facebook_icon.png);
   background-repeat: no-repeat;
   background-position: 12px center;
   box-shadow: 1px 0 0 0 #4765a3;
@@ -105,6 +106,7 @@
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb:hover {
   transform: translateY(-5px);
   box-shadow: 0 0.3em #244279;
+  transition-duration: 0.15s;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo {
@@ -119,6 +121,7 @@
   font-size: 20px;
   text-align: center;
   overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
   z-index: 1;
 }
 
@@ -132,13 +135,14 @@
   content: "";
   border-radius: 8px 0px 0px 8px;
   background-color: #d8d8d8;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_weibo_btn.png);
+  background-image: url(../src/image/img_login_weibo_icon.png);
   background-repeat: no-repeat;
   background-position: 12px center;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo:hover {
   transform: translateY(-5px);
+  transition-duration: 0.15s;
   box-shadow: 0 0.3em #e06818;
 }
 
@@ -153,6 +157,7 @@
   text-align: center;
   font-size: 20px;
   overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter::before {
@@ -164,7 +169,7 @@
   height: 50px;
   content: "";
   border-right: 1px solid #53bae2;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_twitter_btn_1.png);
+  background-image: url(../src/image/img_login_twitter_icon.png);
   background-repeat: no-repeat;
   background-position: 12px center;
   box-shadow: 1px 0 0 0 #2593be;
@@ -172,6 +177,7 @@
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter:hover {
   transform: translateY(-5px);
+  transition-duration: 0.15s;
   box-shadow: 0 0.3em #4287d7;
 }
 
@@ -188,6 +194,7 @@
   font-size: 20px;
   text-align: center;
   overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin::before {
@@ -200,7 +207,7 @@
   border-radius: 8px 8px 8px 8px;
   border-right: 1px solid #7fc04f;
   background-color: #65b331;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login_weixin@2x.png);
+  background-image: url(../src/image/img_login_weixin_icon.png);
   background-repeat: no-repeat;
   background-position: 5px center;
   background-size: 80%;
@@ -209,6 +216,7 @@
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin:hover {
   transform: translateY(-5px);
+  transition-duration: 0.15s;
   box-shadow: 0 0.3em #3a7212;
 }
 
@@ -228,7 +236,12 @@
   height: 31px;
   cursor: pointer;
   z-index: 999;
-  background: url(https://cdn04.pinkoi.com/pinkoi.site/login/img_arrow_r_2x.png) right center no-repeat;
+  background: url(../src/image/img_login_next_white.png) right center no-repeat;
+  background-size: 19px 31px;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"]:hover {
+  background: url(../src/image/img_login_next_pink.png) left center no-repeat;
   background-size: 19px 31px;
 }
 
@@ -239,7 +252,12 @@
   height: 31px;
   cursor: pointer;
   z-index: 999;
-  background: url(//cdn04.pinkoi.com/pinkoi.site/login/img_arrow_l_2x.png) left center no-repeat;
+  background: url(../src/image/img_login_back_white.png) left center no-repeat;
+  background-size: 19px 31px;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"]:hover {
+  background: url(../src/image/img_login_back_pink.png) left center no-repeat;
   background-size: 19px 31px;
 }
 
@@ -248,11 +266,13 @@
   margin: 0 10px 24px 10px;
   font-size: 15px;
   display: block;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .login-pinkoi-account {
   font-size: 20px;
   text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul {
@@ -276,6 +296,7 @@
   border: 1px solid #ccc;
   border-radius: 8px 8px 0 0;
   outline: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #id-input {
@@ -287,10 +308,11 @@
   bottom: 3px;
   text-align: left;
   padding: 18px 30px 15px 28px;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+  background-image: url(../src/image/img_login_account_icon.png);
   background-size: 21px 300px;
   background-repeat: no-repeat;
   background-position: 0 16px;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #login-password {
@@ -301,6 +323,7 @@
   padding: 18px 20px 17px 50px;
   border-radius: 0 0 8px 8px;
   outline: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form ul li #password-input {
@@ -312,10 +335,86 @@
   bottom: 3px;
   text-align: left;
   padding: 18px 30px 15px 28px;
-  background-image: url(https://cdn04.pinkoi.com/pinkoi.site/login/ico_login.png);
+  background-image: url(../src/image/img_login_account_icon.png);
   background-size: 21px 300px;
   background-repeat: no-repeat;
   background-position: 0 -93px;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .button-wrapper {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper #login-form .button-wrapper .login-submit {
+  padding-right: 40px;
+  padding-left: 40px;
+  width: 100%;
+  box-sizing: border-box;
+  font-weight: 600;
+  padding: 12px 40px 13px 40px;
+  background: #f5548c;
+  font-size: 21px;
+  color: #fff;
+  text-align: center;
+  border-radius: 8px 8px 8px 8px;
+  border: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help {
+  text-align: center;
+  width: 100%;
+  line-height: 1;
+  font-size: 0;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem {
+  text-align: center;
+  padding: 16px 0 0 0;
+  width: 100%;
+  line-height: 1;
+  font-size: 0;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="forgetpassword"] {
+  position: relative;
+  padding-right: 16px;
+  font-size: 14px;
+  color: #888;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .login-problem span[data-click="resend"] {
+  padding-right: 0;
+  padding-left: 16px;
+  position: relative;
+  font-size: 14px;
+  color: #888;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .lower-block {
+  font-size: 16px;
+  padding: 16px 0 0 0;
+  color: #4a4a4a;
+}
+
+.login-body .login-outer .login-wrapper .login-inner-wrapper .form-wrapper .login-help .lower-block span[data-click="signup"] {
+  font-size: 16px;
+  color: #268ddf;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
 }
 
 .next {
@@ -324,6 +423,48 @@
 
 .back {
   visibility: hidden;
+}
+
+.animation-toright {
+  position: relative;
+  display: inline-block;
+  width: 300px;
+  height: 120px;
+  background: white;
+  border-radius: 8px 8px 8px 8px;
+  /* animation 參數設定 */
+  transform-origin: 0%;
+  animation: toright 0.1s;
+}
+
+@keyframes toright {
+  from {
+    transform: scaleX(0);
+  }
+  to {
+    transform: scaleX(1);
+  }
+}
+
+.animation-toleft {
+  position: relative;
+  display: inline-block;
+  width: 300px;
+  height: 120px;
+  background: white;
+  border-radius: 8px 8px 8px 8px;
+  /* animation 參數設定 */
+  transform-origin: 100%;
+  animation: toleft 0.1s;
+}
+
+@keyframes toleft {
+  from {
+    transform: scaleX(0);
+  }
+  to {
+    transform: scaleX(1);
+  }
 }
 
 .useless::before {
